rbac-best-practices/restrict-clusterrole-nodesproxy/e2e/bad-resource.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: badcr01
rules:
- apiGroups: [""]
  resources: ["nodes/proxy", "namespaces"]
  verbs: ["get", "watch", "list"]
- apiGroups: ["apps"]
  resources: ["deployments"]
  verbs: ["get", "watch", "list"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: badcr02
rules:
- apiGroups: [""]
  resources: ["pods", "nodes/proxy"]
  verbs: ["get", "watch", "list"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: badcr03
rules:
- apiGroups: [""]
  resources: ["nodes/proxy"]
  verbs: ["get", "watch", "list"]
