rbac-best-practices/restrict-clusterrole-nodesproxy/remediate-restrict-clusterrole-nodesproxy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: remediate-restrict-clusterrole-nodesproxy
  annotations:
    policies.kyverno.io/title: Remediate Restrict ClusterRole with Nodes Proxy
    policies.kyverno.io/category: RBAC Best Practices
    policies.kyverno.io/description: >-
      This policy remediates the restrict-clusterrole-nodesproxy violation
spec:
  background: false
  rules:
    - name: remediate-restrict-clusterrole-nodesproxy
      match:
        any:
        - resources:
            kinds:
              - ClusterRole
      mutate:
        foreach: 
          - list: request.object.rules[]
            foreach:
            - list: element.resources
              preconditions:
                all:
                - key: "{{element}}"
                  operator: Equals
                  value: "nodes/proxy"
              patchesJson6902: |-
                - path: /rules/{{elementIndex0}}/resources/{{elementIndex1}}
                  op: replace
                  value: ""
