rbac-best-practices/restrict-clusterrole-nodesproxy/e2e/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-clusterrole-nodesproxy
spec:
  validationFailureAction: audit
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
